common/com.tibco.cep.studio.common/src/com/tibco/cep/studio/core/grammar/event/EventParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 Event.g 2014-03-26 14:10:35
 
package com.tibco.cep.studio.core.grammar.event; 

import com.tibco.cep.studio.core.rules.*; 
import com.tibco.cep.studio.core.rules.ast.*; 
import com.tibco.cep.studio.core.index.model.ELEMENT_TYPES;
import com.tibco.cep.studio.core.index.model.RuleElement;
import com.tibco.cep.studio.core.index.model.scope.ScopeBlock;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class EventParser extends BaseRulesParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "RULE_TEMPLATE", "RULE_TEMPLATE_DECL", "TEMPLATE_DECLARATOR", "BINDINGS_BLOCK", "BINDING_VIEW_STATEMENT", "BINDINGS_VIEWS_BLOCK", "BINDING_STATEMENT", "DOMAIN_MODEL", "DOMAIN_MODEL_STATEMENT", "ACTION_CONTEXT_BLOCK", "ACTION_CONTEXT_STATEMENT", "ACTION_TYPE", "QUALIFIER", "QUALIFIED_NAME", "SIMPLE_NAME", "LOCAL_VARIABLE_DECL", "DECLARATORS", "VARIABLE_DECLARATOR", "RULE", "RULE_FUNCTION", "RULE_DECL", "NAME", "RULE_BLOCK", "ATTRIBUTE_BLOCK", "STATEMENTS", "DECLARE_BLOCK", "RULE_FUNC_DECL", "SCOPE_BLOCK", "WHEN_BLOCK", "PREDICATES", "BLOCKS", "THEN_BLOCK", "BODY_BLOCK", "SCOPE_DECLARATOR", "TYPE", "DECLARATOR", "VIRTUAL", "PRIMITIVE_TYPE", "ANNOTATION", "ARGS", "METHOD_CALL", "PRIMARY_ASSIGNMENT_EXPRESSION", "SUFFIX", "EXPRESSION", "IF_RULE", "WHILE_RULE", "FOR_RULE", "ELSE_STATEMENT", "STATEMENT", "RETURN_STATEMENT", "FOR_LOOP", "RETURN_TYPE", "MAPPING_BLOCK", "PRIORITY_STATEMENT", "PRIORITY", "VALIDITY_STATEMENT", "VALIDITY", "RANK_STATEMENT", "REQUEUE_STATEMENT", "FORWARD_CHAIN_STATEMENT", "BACKWARD_CHAIN_STATEMENT", "LASTMOD_STATEMENT", "ALIAS_STATEMENT", "LITERAL", "PREDICATE_STATEMENT", "RANGE_EXPRESSION", "RANGE_START", "RANGE_END", "SET_MEMBERSHIP_EXPRESSION", "EXPRESSIONS", "BREAK_STATEMENT", "CONTINUE_STATEMENT", "THROW_STATEMENT", "TRY_RULE", "BLOCK", "CATCH_RULE", "IDENTIFIER", "FINALLY_RULE", "ARRAY_ACCESS_SUFFIX", "INITIALIZER", "LOCAL_INITIALIZER", "ARRAY_LITERAL", "ARRAY_ALLOCATOR", "TRY_STATEMET", "BODY", "CATCH_CLAUSE", "FINALLY_CLAUSE", "TRY_STATEMENT", "HEADER", "VOID_LITERAL", "MODIFIERS", "BINARY_RELATION_NODE", "UNARY_EXPRESSION_NODE", "LHS", "RHS", "OPERATOR", "PRIMARY_EXPRESSION", "PREFIX", "SUFFIXES", "ASSIGNMENT_SUFFIX", "SUFFIX_EXPRESSION", "MappingEnd", "Identifier", "SEMICOLON", "OR", "AND", "EQ", "NE", "INSTANCE_OF", "LT", "GT", "LE", "GE", "LBRACE", "RBRACE", "PLUS", "MINUS", "MULT", "DIVIDE", "MOD", "POUND", "DOT", "ANNOTATE", "FloatingPointLiteral", "StringLiteral", "NullLiteral", "DecimalLiteral", "HexLiteral", "TRUE", "FALSE", "WS", "INCR", "DECR", "ASSIGN", "PLUS_EQUAL", "MINUS_EQUAL", "MULT_EQUAL", "DIV_EQUAL", "MOD_EQUAL", "HEADER_START", "HeaderSection", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "HexDigit", "IntegerTypeSuffix", "Exponent", "FloatTypeSuffix", "EscapeSequence", "CharacterLiteral", "UnicodeEscape", "OctalEscape", "Letter", "JavaIDDigit", "COMMENT", "LINE_COMMENT", "EVENT_DEFINITION", "PARENT", "PROPERTY_DECLARATION", "PROPERTIES_BLOCK", "PROPERTY_BLOCK", "ATTRIBUTE", "ATTRIBUTES_BLOCK", "DOMAIN_STATEMENT", "DOMAIN_NAMES", "RETRY_ON_EXCEPTION_STATEMENT", "DEFAULT_DESTINATION_STATEMENT", "TTL_STATEMENT", "UNITS", "PAYLOAD_STRING_STATEMENT", "LITERALS", "NAMESPACE_STATEMENT", "NAMESPACE", "LOCATION", "TTL", "NAMESPACES_BLOCK", "PAYLOAD_BLOCK", "EXPIRY_ACTION_BLOCK", "'<#mapping>'", "'body'", "'validity'", "'lock'", "'exists'", "'and'", "'key'", "'alias'", "'rank'", "'virtual'", "'abstract'", "'byte'", "'case'", "'char'", "'class'", "'const'", "'default'", "'do'", "'extends'", "'final'", "'float'", "'goto'", "'implements'", "'import'", "'interface'", "'moveto'", "'native'", "'new'", "'package'", "'private'", "'protected'", "'public'", "'short'", "'static'", "'strictfp'", "'super'", "'switch'", "'synchronized'", "'this'", "'throws'", "'transient'", "'volatile'", "'create'", "'modify'", "'call'", "'views'", "'bindings'", "'display'", "'event'", "'concept'", "'\"\"xslt://'", "'\"'", "'void'", "','", "'return'", "'break'", "'continue'", "'throw'", "'if'", "'else'", "'while'", "'for'", "'try'", "'catch'", "'finally'", "'boolean'", "'int'", "'long'", "'double'", "'declare'", "'scope'", "'then'", "'attributes'", "'retryOnException'", "'defaultDestination'", "'properties'", "'domain'", "'timeToLive'", "'Milliseconds'", "'Seconds'", "'Minutes'", "'Hours'", "'Days'", "'expiryAction'", "'payload'", "'payloadString'", "'namespaces'", "'location'"
    };
    public static final int T__259=259;
    public static final int MOD=123;
    public static final int T__258=258;
    public static final int T__257=257;
    public static final int PAYLOAD_BLOCK=181;
    public static final int T__262=262;
    public static final int T__263=263;
    public static final int T__260=260;
    public static final int T__261=261;
    public static final int T__266=266;
    public static final int T__267=267;
    public static final int T__264=264;
    public static final int T__265=265;
    public static final int TRY_STATEMENT=91;
    public static final int EOF=-1;
    public static final int STATEMENT=52;
    public static final int TYPE=38;
    public static final int ARRAY_ALLOCATOR=86;
    public static final int RPAREN=146;
    public static final int T__247=247;
    public static final int MappingEnd=105;
    public static final int T__246=246;
    public static final int T__249=249;
    public static final int T__248=248;
    public static final int INSTANCE_OF=112;
    public static final int DEFAULT_DESTINATION_STATEMENT=171;
    public static final int MOD_EQUAL=142;
    public static final int LOCAL_VARIABLE_DECL=19;
    public static final int T__250=250;
    public static final int ARGS=43;
    public static final int T__251=251;
    public static final int T__252=252;
    public static final int T__253=253;
    public static final int T__254=254;
    public static final int T__255=255;
    public static final int EQ=110;
    public static final int T__256=256;
    public static final int VIRTUAL=40;
    public static final int DIVIDE=122;
    public static final int RBRACK=148;
    public static final int GE=116;
    public static final int RBRACE=118;
    public static final int IntegerTypeSuffix=150;
    public static final int MULT_EQUAL=140;
    public static final int RULE_BLOCK=26;
    public static final int SEMICOLON=107;
    public static final int HEADER_START=143;
    public static final int EXPRESSIONS=73;
    public static final int WS=134;
    public static final int FINALLY_RULE=81;
    public static final int ACTION_TYPE=15;
    public static final int T__269=269;
    public static final int FloatingPointLiteral=127;
    public static final int T__268=268;
    public static final int LHS=97;
    public static final int JavaIDDigit=158;
    public static final int LOCATION=178;
    public static final int GT=114;
    public static final int STATEMENTS=28;
    public static final int VALIDITY=60;
    public static final int ELSE_STATEMENT=51;
    public static final int VOID_LITERAL=93;
    public static final int BLOCKS=34;
    public static final int T__270=270;
    public static final int BREAK_STATEMENT=74;
    public static final int PROPERTY_DECLARATION=163;
    public static final int T__215=215;
    public static final int T__216=216;
    public static final int RETRY_ON_EXCEPTION_STATEMENT=170;
    public static final int T__213=213;
    public static final int T__214=214;
    public static final int LBRACK=147;
    public static final int T__219=219;
    public static final int T__217=217;
    public static final int DIV_EQUAL=141;
    public static final int T__218=218;
    public static final int TEMPLATE_DECLARATOR=6;
    public static final int DOMAIN_STATEMENT=168;
    public static final int ANNOTATION=42;
    public static final int LBRACE=117;
    public static final int HexDigit=149;
    public static final int HeaderSection=144;
    public static final int SUFFIXES=102;
    public static final int DOMAIN_MODEL=11;
    public static final int RANGE_START=70;
    public static final int T__223=223;
    public static final int LPAREN=145;
    public static final int T__222=222;
    public static final int T__221=221;
    public static final int T__220=220;
    public static final int MAPPING_BLOCK=56;
    public static final int T__202=202;
    public static final int T__203=203;
    public static final int WHEN_BLOCK=32;
    public static final int PARENT=162;
    public static final int T__204=204;
    public static final int T__205=205;
    public static final int T__206=206;
    public static final int T__207=207;
    public static final int SUFFIX=46;
    public static final int T__208=208;
    public static final int T__209=209;
    public static final int IF_RULE=48;
    public static final int RANK_STATEMENT=61;
    public static final int PLUS=119;
    public static final int SUFFIX_EXPRESSION=104;
    public static final int THEN_BLOCK=35;
    public static final int HEADER=92;
    public static final int T__210=210;
    public static final int REQUEUE_STATEMENT=62;
    public static final int T__212=212;
    public static final int RETURN_TYPE=55;
    public static final int T__211=211;
    public static final int QUALIFIED_NAME=17;
    public static final int HexLiteral=131;
    public static final int T__239=239;
    public static final int T__237=237;
    public static final int T__238=238;
    public static final int T__235=235;
    public static final int T__236=236;
    public static final int QUALIFIER=16;
    public static final int CATCH_RULE=79;
    public static final int PAYLOAD_STRING_STATEMENT=174;
    public static final int MINUS=120;
    public static final int T__245=245;
    public static final int T__244=244;
    public static final int T__243=243;
    public static final int T__242=242;
    public static final int T__241=241;
    public static final int T__240=240;
    public static final int StringLiteral=128;
    public static final int T__228=228;
    public static final int FOR_LOOP=54;
    public static final int T__229=229;
    public static final int T__224=224;
    public static final int T__225=225;
    public static final int T__226=226;
    public static final int T__227=227;
    public static final int ACTION_CONTEXT_STATEMENT=14;
    public static final int BLOCK=78;
    public static final int T__232=232;
    public static final int T__231=231;
    public static final int T__234=234;
    public static final int OctalEscape=156;
    public static final int T__233=233;
    public static final int BINDING_VIEW_STATEMENT=8;
    public static final int THROW_STATEMENT=76;
    public static final int T__230=230;
    public static final int BINDINGS_BLOCK=7;
    public static final int PREFIX=101;
    public static final int LT=113;
    public static final int VALIDITY_STATEMENT=59;
    public static final int FloatTypeSuffix=152;
    public static final int MINUS_EQUAL=139;
    public static final int TTL=179;
    public static final int RULE_DECL=24;
    public static final int BODY_BLOCK=36;
    public static final int LITERALS=175;
    public static final int ARRAY_LITERAL=85;
    public static final int Identifier=106;
    public static final int NAMESPACES_BLOCK=180;
    public static final int NAMESPACE_STATEMENT=176;
    public static final int UNITS=173;
    public static final int PREDICATE_STATEMENT=68;
    public static final int PRIMARY_EXPRESSION=100;
    public static final int NAME=25;
    public static final int DOMAIN_NAMES=169;
    public static final int INCR=135;
    public static final int PROPERTIES_BLOCK=164;
    public static final int ACTION_CONTEXT_BLOCK=13;
    public static final int PRIMITIVE_TYPE=41;
    public static final int ASSIGNMENT_SUFFIX=103;
    public static final int BODY=88;
    public static final int COMMENT=159;
    public static final int FINALLY_CLAUSE=90;
    public static final int DECLARE_BLOCK=29;
    public static final int ANNOTATE=126;
    public static final int NE=111;
    public static final int UNARY_EXPRESSION_NODE=96;
    public static final int DECLARATORS=20;
    public static final int LOCAL_INITIALIZER=84;
    public static final int RULE=22;
    public static final int POUND=124;
    public static final int LINE_COMMENT=160;
    public static final int MULT=121;
    public static final int LASTMOD_STATEMENT=65;
    public static final int METHOD_CALL=44;
    public static final int RULE_TEMPLATE_DECL=5;
    public static final int RULE_FUNC_DECL=30;
    public static final int SCOPE_BLOCK=31;
    public static final int NAMESPACE=177;
    public static final int DECLARATOR=39;
    public static final int RANGE_EXPRESSION=69;
    public static final int EXPIRY_ACTION_BLOCK=182;
    public static final int SET_MEMBERSHIP_EXPRESSION=72;
    public static final int PREDICATES=33;
    public static final int T__200=200;
    public static final int BINDING_STATEMENT=10;
    public static final int ATTRIBUTE_BLOCK=27;
    public static final int PRIORITY=58;
    public static final int T__201=201;
    public static final int ATTRIBUTES_BLOCK=167;
    public static final int RULE_TEMPLATE=4;
    public static final int OR=108;
    public static final int TTL_STATEMENT=172;
    public static final int BACKWARD_CHAIN_STATEMENT=64;
    public static final int BINARY_RELATION_NODE=95;
    public static final int PRIORITY_STATEMENT=57;
    public static final int CONTINUE_STATEMENT=75;
    public static final int FALSE=133;
    public static final int Letter=157;
    public static final int EscapeSequence=153;
    public static final int RHS=98;
    public static final int PRIMARY_ASSIGNMENT_EXPRESSION=45;
    public static final int NullLiteral=129;
    public static final int TRY_STATEMET=87;
    public static final int CharacterLiteral=154;
    public static final int WHILE_RULE=49;
    public static final int ATTRIBUTE=166;
    public static final int FOR_RULE=50;
    public static final int Exponent=151;
    public static final int AND=109;
    public static final int RULE_FUNCTION=23;
    public static final int FORWARD_CHAIN_STATEMENT=63;
    public static final int INITIALIZER=83;
    public static final int CATCH_CLAUSE=89;
    public static final int TRY_RULE=77;
    public static final int MODIFIERS=94;
    public static final int VARIABLE_DECLARATOR=21;
    public static final int T__199=199;
    public static final int T__198=198;
    public static final int T__197=197;
    public static final int T__196=196;
    public static final int RETURN_STATEMENT=53;
    public static final int T__195=195;
    public static final int T__194=194;
    public static final int T__193=193;
    public static final int T__192=192;
    public static final int T__191=191;
    public static final int T__190=190;
    public static final int IDENTIFIER=80;
    public static final int ARRAY_ACCESS_SUFFIX=82;
    public static final int PROPERTY_BLOCK=165;
    public static final int PLUS_EQUAL=138;
    public static final int DOT=125;
    public static final int EXPRESSION=47;
    public static final int T__184=184;
    public static final int SCOPE_DECLARATOR=37;
    public static final int T__183=183;
    public static final int RANGE_END=71;
    public static final int T__186=186;
    public static final int T__185=185;
    public static final int T__188=188;
    public static final int T__187=187;
    public static final int T__189=189;
    public static final int OPERATOR=99;
    public static final int ALIAS_STATEMENT=66;
    public static final int LITERAL=67;
    public static final int EVENT_DEFINITION=161;
    public static final int DecimalLiteral=130;
    public static final int TRUE=132;
    public static final int SIMPLE_NAME=18;
    public static final int DOMAIN_MODEL_STATEMENT=12;
    public static final int UnicodeEscape=155;
    public static final int ASSIGN=137;
    public static final int DECR=136;
    public static final int BINDINGS_VIEWS_BLOCK=9;
    public static final int LE=115;

    // delegates
    public Event_BaseElement gBaseElement;
    // delegators


        public EventParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public EventParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            gBaseElement = new Event_BaseElement(input, state, this);         
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
        gBaseElement.setTreeAdaptor(this.adaptor);
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return EventParser.tokenNames; }
    public String getGrammarFileName() { return "Event.g"; }


    protected boolean virtual = false;
    protected RulesASTNode headerTree = null;

    public void setRuleElementType(ELEMENT_TYPES type) {
    	gBaseElement.setRuleElementType(type);
    }

    public void setTypeReference(boolean typeRef) {
    	gBaseElement.setTypeReference(typeRef);
    }
    	
    public void markAsArray(RulesASTNode node) {
    	gBaseElement.markAsArray(node);
    }

    public void popScope() {
    	gBaseElement.popScope();
    }

    public void pushScope(int type) {
    	gBaseElement.pushScope(type);
    }

    public boolean isInActionContextBlock() {
    	return gBaseElement.isInActionContextBlock();
    }

    public void setInActionContextBlock(boolean b) {
    	gBaseElement.setInActionContextBlock(b);
    }

    public void pushGlobalScopeName(RulesASTNode node, RulesASTNode type) {
    	gBaseElement.pushGlobalScopeName(node, type);
    }
    	
    public void pushDefineName(RulesASTNode node, RulesASTNode type) {
    	gBaseElement.pushDefineName(node, type);
    }

    public void addProblemCollector(IProblemHandler collector) {
    	gBaseElement.addProblemCollector(collector);
    }

    public RuleElement getRuleElement() {
    	return gBaseElement.getRuleElement();
    }

    public void setRuleElement(RuleElement element) {
    	gBaseElement.setRuleElement(element);
    }

    public CommonToken getCurrentToken() {
    	return gBaseElement.getCurrentToken();
    }

    public ScopeBlock getLastPoppedScope() {
    	return gBaseElement.getLastPoppedScope();
    }

    public ScopeBlock getScope() {
    	return gBaseElement.getScope();
    }

    public ScopeBlock getLocalScope() {
    	return gBaseElement.getLocalScope();
    }

    	// THIS METHOD IS UNIQUE TO EACH GRAMMAR, AS THE LEXER CLASS IS UNIQUE
    	public RulesASTNode getHeaderNode()
    	{
    		return ((EventLexer)getTokenStream().getTokenSource()).getHeaderNode();
    	}



    public static class startRule_return extends ParserRuleReturnScope {
        EventASTNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "startRule"
    // Event.g:128:1: startRule : compilationUnit ;
    public final EventParser.startRule_return startRule() throws RecognitionException {
        EventParser.startRule_return retval = new EventParser.startRule_return();
        retval.start = input.LT(1);

        EventASTNode root_0 = null;

        EventParser.compilationUnit_return compilationUnit1 = null;



        try {
            // Event.g:132:2: ( compilationUnit )
            // Event.g:132:4: compilationUnit
            {
            root_0 = (EventASTNode)adaptor.nil();

            pushFollow(FOLLOW_compilationUnit_in_startRule151);
            compilationUnit1=compilationUnit();

            state._fsp--;

            adaptor.addChild(root_0, compilationUnit1.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (EventASTNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        catch (RewriteEmptyStreamException e) {
        	// do nothing for now
        	System.err.println("##RewriteEmptyStreamException (can be ignored - stack trace for informational purposes only)");
        	// e.printStackTrace();
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "startRule"

    public static class compilationUnit_return extends ParserRuleReturnScope {
        EventASTNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // Event.g:135:1: compilationUnit : ( HeaderSection )? eventDefinition EOF ;
    public final EventParser.compilationUnit_return compilationUnit() throws RecognitionException {
        EventParser.compilationUnit_return retval = new EventParser.compilationUnit_return();
        retval.start = input.LT(1);

        EventASTNode root_0 = null;

        Token HeaderSection2=null;
        Token EOF4=null;
        EventParser.eventDefinition_return eventDefinition3 = null;


        EventASTNode HeaderSection2_tree=null;
        EventASTNode EOF4_tree=null;

        try {
            // Event.g:136:2: ( ( HeaderSection )? eventDefinition EOF )
            // Event.g:137:3: ( HeaderSection )? eventDefinition EOF
            {
            root_0 = (EventASTNode)adaptor.nil();

            // Event.g:137:3: ( HeaderSection )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==HeaderSection) ) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // Event.g:137:3: HeaderSection
                    {
                    HeaderSection2=(Token)match(input,HeaderSection,FOLLOW_HeaderSection_in_compilationUnit166); 
                    HeaderSection2_tree = (EventASTNode)adaptor.create(HeaderSection2);
                    adaptor.addChild(root_0, HeaderSection2_tree);


                    }
                    break;

            }

            pushFollow(FOLLOW_eventDefinition_in_compilationUnit171);
            eventDefinition3=eventDefinition();

            state._fsp--;

            adaptor.addChild(root_0, eventDefinition3.getTree());
            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_compilationUnit175); 
            EOF4_tree = (EventASTNode)adaptor.create(EOF4);
            adaptor.addChild(root_0, EOF4_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (EventASTNode)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }

        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        catch (RewriteEmptyStreamException e) {
        	// do nothing for now
        	System.err.println("##RewriteEmptyStreamException (can be ignored - stack trace for informational purposes only)");
        	// e.printStackTrace();
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class eventDefinition_return extends ParserRuleReturnScope {
        EventASTNode tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "eventDefinition"
    // Event.g:142:1: eventDefinition : 'event' nm= name[TYPE_RULE_DEF] ( 'extends' parent= name[TYPE_RULE_DEF] )? LBRACE eventNT RBRACE -> ^( EVENT_DEFINITION[\"event\"] ^( NAME[\"name\"] $nm) ( ^( PARENT[\"parent\"] $parent) )? ^( BLOCKS eventNT ) ) ;
    public final EventParser.eventDefinition_return eventDefinition() throws RecognitionException {
        EventParser.eventDefinition_return retval = new EventParser.eventDefinition_return();
        retval.start = input.LT(1);

        EventASTNode root_0 = null;

        Token string_literal5=null;
        Token string_literal6=null;
        Token LBRACE7=null;
        Token RBRACE9=null;
        Event_BaseElement.name_return nm = null;

        Event_BaseElement.name_return parent = null;

        EventParser.eventNT_return eventNT8 = null;


        EventASTNode string_literal5_tree=null;
        EventASTNode string_literal6_tree=null;
        EventASTNode LBRACE7_tree=null;
        EventASTNode RBRACE9_tree=null;
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_201=new RewriteRuleTokenStream(adaptor,"token 201");
        RewriteRuleTokenStream stream_231=new RewriteRuleTokenStream(adaptor,"token 231");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_name=new RewriteRuleSubtreeStream(adaptor,"rule name");
        RewriteRuleSubtreeStream stream_eventNT=new RewriteRuleSubtreeStream(adaptor,"rule eventNT");
        try {
            // Event.g:143:2: ( 'event' nm= name[TYPE_RULE_DEF] ( 'extends' parent= name[TYPE_RULE_DEF] )? LBRACE eventNT RBRACE -> ^( EVENT_DEFINITION[\"event\"] ^( NAME[\"name\"] $nm) ( ^( PARENT[\"parent\"] $parent) )? ^( BLOCKS eventNT ) ) )
            // Event.g:143:4: 'event' nm= name[TYPE_RULE_DEF] ( 'extends' parent= name[TYPE_RULE_DEF] )? LBRACE eventNT RBRACE
            {
            string_literal5=(Token)match(input,231,FOLLOW_231_in_eventDefinition186);  
